style spacing fixes

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -2,6 +2,7 @@
 body {
     font-family: $font-family-base;
     font-size: $font-size-regular;
+    font-weight: 450;
     color: $color-text;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
@@ -336,6 +337,11 @@ figure.full-bleed {
             ol, ul {
                 padding-left: $spacing-unit + $spacing-micro-unit;
                 padding-right: $spacing-unit + $spacing-micro-unit;
+                @include media-query-small-screen() {
+                    padding-left: 0;
+                    padding-right: 0;
+                }
+
             }
 
             a {
@@ -374,6 +380,7 @@ figure.full-bleed {
                 font-weight: normal;
 
                 @include font-size-responsive();
+                margin-bottom: 0.5rem;
             }
 
             img {
@@ -397,7 +404,7 @@ figure.full-bleed {
             figure {
                 figcaption {
                     font-size: $font-size-medium;
-                    margin: 0 0 $spacing-content-sides 0;
+                    margin-top: $spacing-micro-unit;
                 }
 
                 // handle alignment of figcaptoin(s)
@@ -425,6 +432,10 @@ figure.full-bleed {
                 font-size: $font-size-medium;
                 padding: $spacing-unit 0;
                 margin-bottom: $spacing-unit;
+                @include media-query-small-screen() {
+                    margin-bottom: 0;
+                }
+
 
                 ol {
                     margin-left: 0;
@@ -540,6 +551,10 @@ figure.full-bleed {
         margin-left: 0;
         padding-left: 30px; // reset
     }
+    img.callout {
+        // figure usually has a margin so no need here
+        margin-bottom: 0;
+    }
 //#endregion }
 
 .sidenote {
@@ -603,8 +618,6 @@ article.post-content {
         input {
             text-align: center;
             padding: 0.5rem;
-            font-family: $font-family-base;
-            font-size: 0.8rem;
         }
 
         input[type="text"] {
